apps/cyberstorm-remix/app/c/Community.css
@layer nimbus-layout {
  .community {
    --nimbus-layout-content-max-width: 120rem;

    z-index: 1;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: flex-start;
    align-self: stretch;
    padding: 1rem 3rem 2rem;
  }

  .community__header {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-self: stretch;

    /* min-height: 6.25rem; */
  }

  .community__background {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-self: stretch;
    justify-content: center;
    max-height: 12.5rem;
    border-radius: 0.5rem;
    overflow-y: hidden;
    transition: height 2s;

    > img {
      width: 100%;
      height: 100%;
      border-radius: 0.5rem;
      object-fit: cover;
      background: var(--color-ui-surface-1);
      opacity: 0.8;
    }

    .skeleton {
      height: 12.5rem;
    }
  }

  .community__background--packagePage {
    height: 6.25rem;

    > img {
      opacity: 0.3;
      mix-blend-mode: luminosity;
    }
  }

  .community__content-header-wrapper {
    z-index: 1;
    display: flex;
    flex-wrap: wrap;
    gap: 1.5rem;
    place-items: flex-end stretch;
    align-self: stretch;
    justify-content: space-between;
    height: max-content;
    margin-top: -1rem;
    padding-left: 1rem;
    transition:
      height ease 1s,
      opacity 0.2s,
      visibility 1s 0s;
  }

  .community__content-header {
    display: flex;
    flex-grow: 1;
    gap: 1.5rem;
    align-items: flex-end;
    align-self: stretch;
    min-width: 75%;
    height: max-content;
  }

  .community__content-header--hide {
    height: 0;
    visibility: collapse;
    opacity: 0;
    transition:
      height ease 1s,
      opacity 0.8s 0.2s,
      visibility 1s 0s;
  }

  .community__game-icon {
    display: flex;
    gap: 0.5rem;
    align-items: center;
    width: 7rem;
    height: 7rem;
    padding: var(--Space-12, 0.75rem);
    border: 1px solid var(--Color-border-bright, rgb(70 70 149 / 0.66));
    border-radius: var(--Radius-xl, 1rem);
    background: var(--Color-Surface-1, #070721);
    aspect-ratio: 1/1;
  }

  .community__game-icon-tinified {
    display: flex;
    flex: 1 0 0;
    align-items: center;
    justify-content: center;
    height: 5.5rem;

    > img {
      width: 5.5rem;
      height: 5.5rem;
    }
  }

  .community__content-header-content {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    gap: 0.75rem;
    align-items: flex-start;
    justify-content: center;
  }

  .community__header-info {
    display: flex;
    flex: 1 0 0;
    flex-direction: column;
    gap: 0.25rem;
    align-items: flex-start;
    align-self: stretch;
    min-width: 60%;
    max-width: 100%;

    > h1 {
      line-height: 80%;
      overflow-wrap: anywhere;
    }
  }

  .community__header-meta {
    display: flex;
    flex: 0 1 60%;
    gap: 1.5rem;
    align-items: center;
    min-width: 60%;
    height: 16px;

    > .skeleton {
      height: 1rem;
    }
  }

  .community__small-image {
    width: 3.5rem;
    height: 3.5rem;

    --aspect-ratio: 1;

    > svg {
      width: 50%;
    }
  }

  .community__content {
    flex-wrap: wrap;
  }

  .community__info {
    flex-shrink: 0;
    min-width: 8ch;
    overflow-wrap: anywhere;
  }

  .community__meta {
    display: flex;
    flex-wrap: wrap;
    gap: var(--gap-3xl);
    align-items: center;
  }

  .community__item {
    display: flex;
    gap: var(--gap-xs);
    align-items: center;
    font-weight: var(--font-weight-bold);
    font-size: var(--font-size-body-md);
    line-height: var(--line-height-md);
    white-space: nowrap;

    > svg {
      inline-size: var(--space-16);
    }
  }

  @media (width >= 41rem) {
    .community__background {
      height: 12.5rem;
    }
  }

  @media (width < 41rem) {
    .community__background {
      .skeleton {
        height: 8rem;
      }
    }

    .community__header {
      gap: 1rem;
    }

    .community__content-header-wrapper {
      margin-top: 0;
      padding-left: 0;
    }

    .community__game-icon {
      display: none;
    }
  }

  @media (width <= 48rem) {
    .community__meta {
      gap: var(--gap-2xs);
    }

    .community__item {
      font-size: var(--font-size-body-sm);
    }
  }

  @media (width <= 24rem) {
    .community__info {
      font-size: 2rem;
      line-height: var(--line-height-sm);
    }
  }
}

